kaggle_environments/envs/open_spiel_env/games/chess/visualizer/v2/src/components/Playerbar.module.css
.playerBar {
  display: grid;
  grid-template-columns: 1fr 1fr;
  align-items: start;
  width: 100%;
  max-width: min(512px, calc(100% - 60px));
  margin-inline: auto;

  &[data-player="b"] {
    align-items: end;

    & svg {
      color: #fff;
    }
  }

  & p {
    margin: 0;
    font-size: 1em;
  }
}

.player {
  display: flex;
  align-items: center;
  background-color: white;
  gap: 0.75em;
  padding: 0.5em 1em;
  justify-self: start;
  position: relative;
  line-height: 1.3;

  [data-player="b"] & {
    padding-left: 2em;

    & .logo {
      left: -0.75em;
    }
  }

  [data-player="w"] & {
    padding-right: 2.5em;
    order: 1;

    & .logo {
      order: 1;
      right: -0.75em;
    }
  }

  [data-player="w"] & {
    justify-self: end;
  }
}

.captures {
  --capture-size: 2em;

  display: grid;
  grid-template-columns: repeat(6, var(--capture-size));
  user-select: none;

  [data-player="b"] & {
    justify-self: end;
    display: flex;
    flex-wrap: wrap-reverse;
    width: calc(6 * var(--capture-size));

    & img {
      width: var(--capture-size);
    }
  }

  & img {
    width: 100%;
    height: auto;
  }
}

.logo {
  position: absolute;
  place-items: center;
  user-select: none;
  scale: 1.5;

  & img {
    width: 2em;
    height: 2em;
  }

  & svg {
    width: 1.5em;
    height: 1.5em;
  }
}

@container (max-width: 600px) {
  .logo {
    scale: 1.75;
  }
}

